# imgopt

./: .dockerignore  .env.example  .gitignore  CHECKUP.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: convert.md  laravel-integration.md  usage.md
src/: lib.rs  main.rs  processor.rs  server.rs
src/handlers/: convert.rs  health.rs  mod.rs
src/middleware/: auth.rs
tests/: integration_tests.rs
