[package]
name = "imgopt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "limit", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
image = "0.25"
webp = "0.3"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
anyhow = "1"
subtle = "2"
ravif = "0.13.0"
imgref = "1.12.0"
rgb = "0.8.52"
rav1e = { version = "0.8.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.5"

[profile.dev]
opt-level = 0
debug = 0 # Reduce debug info to save disk/memory
strip = "debuginfo"

[profile.test]
opt-level = 0
debug = 0
strip = "debuginfo"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["multipart", "json"] }
